--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo">
+            <div></div>
+        </div>
         <nav class="menu">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -21,9 +23,22 @@
         </nav>
     </header>
     <main>
-        <div class="conteudo"></div>
-        <div class="destaque"></div>
+        <div class="conteudo">
+            <h1>SÃO PAULO FUTEBOL CLUBE</h1>
+            <p>O São Paulo Futebol Clube, mais conhecido como São Paulo FC ou simplesmente São Paulo</p>
+            <div class="acao">
+                <button><a href="#">SPFC</a></button>
+            </div>
+            <div class="social">
+                <div class="instagram"></div>
+                <div class="youtube"></div>
+                <div class="site"></div>
+            </div>
+        </div>
+        <div class="destaque"></div>    
     </main>
-    <footer></footer>
+    <footer>
+        <h2>Gustavo Motollo</h2>
+    </footer>
 </body>
 </html>
