add de links do site

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Preços</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Ajuda</a></li>
+                <li><a href="https://www.saopaulofc.net/">Home</a></li>
+                <li><a href="https://sociotorcedor.com.br/">Sócio</a></li>
+                <li><a href="https://www.saopaulofc.net/categoria/ingressos/">Ingressos</a></li>
+                <li><a href="https://www.saostore.com.br/">Loja</a></li>
+                <li><a href="https://www.spfcplay.com.br/pages/122">SPFCPlayer</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
             <h1>SÃO PAULO FUTEBOL CLUBE</h1>
             <p>O São Paulo Futebol Clube, mais conhecido como São Paulo FC ou simplesmente São Paulo</p>
             <div class="acao">
-                <button><a href="#">SPFC</a></button>
+                <button><a href="https://www.saopaulofc.net/">SPFC</a></button>
             </div>
             <div class="social">
                 <div class="instagram"></div>
